client/src/scss/_chat.scss
.chat-page-container {
  margin: 20px;
  display: flex;
  height: 65vh;
  justify-content: center;
  align-items: center;

  .user-profile {
    text-align: center;
    img {
      width: 20vh;
      height: 20vh;
      border-radius: 50%;
      margin: 10px;
    }

    button {
      position: relative;
      left: 0%;
    }
  }

  .contacts-panel {
    overflow-y: scroll;
    padding: 10px;
    height: 35vh;
    max-width: 50vw;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 12px;
    box-shadow: 5px 8px 2px rgba(0, 0, 0, 0.103);

    @include second-mobile-responsiveness {
      max-width: 80vw;
    }

    ul {
      min-height: 30vh;
      width: 100%;

      li {
        width: 80%;
        padding: 2px;
        margin: 20px auto;
        list-style: none;

        .chat-link-btn {
          width: 100%;
          color: white;
          display: flex;
          align-items: center;
          padding: 7px 10px;
          text-decoration: none;
          background-color: $app-def-color;
          border-radius: 40px;
          transition: all ease 0.5s;

          &:hover {
            color: $app-def-color;
            background-color: transparent;
            box-shadow: 1px 1px 3px rgba(1, 7, 83, 0.308);
          }
          &:active {
            color: $app-def-color;
            background-color: transparent;
            box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.13);
          }
          img {
            width: 30px;
            height: 30px;
            border-radius: 50%;

            @include second-mobile-responsiveness {
            }
          }
          h5 {
            margin: 6px;
          }
        }
      }
    }
  }

  .search-menu {
    margin: 10px auto;
    form {
      input[type="text"] {
        border-radius: 5px;
        border: 1px solid $app-def-color;
        box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.034);
        font-size: 17px;
        padding: 7px 10px;
      }
      div {
        display: flex;
        justify-content: center;
      }
      input[type="submit"] {
        position: relative;
        left: 0;
      }
    }
  }
}

.chatroom-container {
  padding: 5px;

  @include second-mobile-responsiveness {
    margin: 0px 4px;

  }

  .chat-panel {
    border-radius: 12px;
    padding: 7px 10px 20px 10px;
    display: flex;
    max-width: 50%;
    height: 80vh;
    align-items: center;
    @include first-mobile-responsiveness{
          max-width: 40%;
    }


    @include second-mobile-responsiveness {
      height: 20px;
      display: block;
      background-color: transparent;
    }

    .receiver-profile {
      margin: auto;
      @include second-mobile-responsiveness {
        display: flex;
        align-items: center;
        margin-left: 5px;
        margin-right: 5px;
        margin-top: 3px;
        width: 100%;
        margin-bottom: 10px;
      }

      img {
        border-radius: 50%;
        height: 30vh;
        width: 30vh;

        @include first-mobile-responsiveness{
          height: 240px;
          width: 240px;
        }

        @include second-mobile-responsiveness {
          height: 50px;
          width: 50px;
        }
      }

      div {
        h3 {
          margin: 0 17px;
          font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
            "Lucida Sans", Arial, sans-serif;
          font-weight: 800;
          color: rgba(4, 5, 77, 0.555);
        }
        p {
          color: rgb(184, 184, 184);
          font-size: 200;
          font-size: 16px;
          margin: 3px 17px;
        }
      }
    }

    .chat-bg {
      background: rgba(255, 255, 255, 0.986);
      margin: 20px 5px 0 5px;
      height: 75%;
      position: absolute;
      bottom: 10px;
      padding: 8px;
      border-radius: 10px;
      box-shadow: 1px 1px 2px 2px rgba(20, 4, 90, 0.164);
      min-width: 50vw;

      @include first-mobile-responsiveness{
          min-width: 59vw;
      }

      @include second-mobile-responsiveness {
        width: 90vw;
        margin: 70px auto 0 auto; 
        position: relative;
      }

      @media (max-height:670px){
        margin-top: 40px;
      }

      .chat-setting {
        height: 100%;
        position: relative;
        form {
          width: 100%;
          z-index: 1000000;
          display: flex;
          justify-content: flex-end;
          position: absolute;
          bottom: 1px;
          right: 1px;
          input[type="text"] {
            border-radius: 10px;
            border: 2px solid rgba(0, 0, 0, 0.192);
            outline: none;
            font-size: 15px;
            padding: 2px;
            margin-top: 7px;
            width: 60%;

            @include second-mobile-responsiveness {
              width: 100%;
            }
          }
          input[type="submit"] {
            background-color: white;
            margin: 0 4px;
            transform: translateY(2px);

            &:hover{
              background-color: $app-def-color;
            }
          }
        }

        .chat-stage-layout {
          height: 73vh;
          position: relative;
          overflow-y: scroll;
          display: flex;
          flex-direction: column-reverse;
          scroll-behavior: auto;

          .custom-p {
            font-size: 20px;
            color: rgba(0, 0, 0, 0.13);
            text-align: center;
          }

          ul {
            list-style: none;
            width: 100%;
            margin-bottom: 30px;

            li {
              border-radius: 12px;
              padding: 2px;
              margin: 8px 0;
              width: 100%;

              div {
                max-width: 55%;

                @include second-mobile-responsiveness {
                  max-width: 85%;
                }

                p {
                  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.158);
                  font-size: 18px;
                  padding: 7px;
                  border-radius: 5px;
                  font-weight: 400;
                }

                span {
                  color: rgba(4, 3, 88, 0.37);
                  width: 100%;
                }
              }
            }

            .receiver-message {
              display: flex;
              justify-content: start;
            }

            .user-message {
              transform: translateX(-5px);
              display: flex;
              justify-content: end;
              text-align: end;

              p {
                color: rgb(255, 255, 255);
                overflow: hidden;
                background-color: $app-def-color;
              }
            }
          }
        }
      }
    }
  }
}

.no-user-profile {
  font-size: 130px;
  text-align: center;
  color: rgb(189, 189, 189);

  @include second-mobile-responsiveness {
    font-size: 40px;
  }
}

.no-user-icon {
  color: rgb(189, 189, 189);
  font-size: 30px;
}

